--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -26,7 +26,7 @@
 						</p>
 
 						<p>
-							Après le lycée, la musique s'efface quelque temps afin de permettre à Jérémy de poursuivre des études supérieures ; il intègre l'<a href="http://www.utc.fr" class="text-link">UTC</a> (<em>Université de Technologie de Compiègne</em>), où il suit des études d'ingénieurs en informatique ; il en profite alors pour s'investir dans le <strong>milieu associatif</strong>, et oeuvre notamment pour promouvoir les actions artistiques au sein de l'école. Une fois son diplôme obtenu en 2014, il décide de quitter cette casquette scientifique et de vivre de <strong>sa passion</strong> à temps plein.
+							Après le lycée, la musique s'efface quelque temps afin de permettre à Jérémy de poursuivre des études supérieures ; il intègre l'<a href="http://www.utc.fr" class="text-link">UTC</a> (<em>Université de Technologie de Compiègne</em>), où il suit des études d'ingénieurs en informatique ; il en profite alors pour s'investir dans le <strong>milieu associatif</strong>, et oeuvre notamment pour promouvoir les actions artistiques au sein de l'école. Une fois son diplôme obtenu en 2014, il décide de quitter cette casquette scientifique et de vivre de <strong>sa passion</strong> à temps plein, s'installant proche de <strong>Paris</strong>, en Ile de France.
 						</p>
 
 						<p>
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<!-- /.row -->
-		</div>	
+		</div>
 		<!-- /.container -->
 	</section>
 {% endblock %}
