--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Accordéoniste, Paris - Biographie
+	Accordéoniste, Paris | Jérémy DUTHEIL | Biographie
 {% endblock %}
 
 {% block body %}
