--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -15,7 +15,7 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
-			<h1 class="section-title">Jérémy DUTHEIL - Biographie</h1>
+			<h1 class="section-title">Accordéoniste professionnel, Paris</h1>
 
 			<div class="row">
 				<div class="col-sm-8">
