--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Accordéoniste, Paris | Jérémy DUTHEIL | Biographie
+	Accordéoniste, Paris | Jérémy Dutheil | Biographie
 {% endblock %}
 
 {% block body %}
