--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -4,6 +4,10 @@
 	Accordéoniste, Paris | Jérémy Dutheil | Biographie
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="Découvrez la biographie de Jérémy Dutheil, accordéoniste jazz et chanson basé sur Paris">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
