--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Découvrez la biographie de Jérémy Dutheil, accordéoniste jazz et chanson basé sur Paris">
+	<meta name="description" content="Découvrez la biographie de Jérémy Dutheil, accordéoniste jazz et chanson française basé sur Paris">
 {% endblock %}
 
 {% block body %}
