--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Accordéoniste, Paris | Jérémy Dutheil | Biographie
+	Accordéoniste - Paris - Biographie - Jazz et chanson française
 {% endblock %}
 
 {% block metadesc %}
