--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -39,7 +39,7 @@
 
 						<p>
 							Fort de ces nombreuses expériences, Jérémy possède une <strong>formation musicale complète</strong> (solfège, rythme, ...) mais aussi une capacité d'<strong>improvisation</strong> et une sensitibilité à de nombreux <a href="#" class="text-link">styles musicaux</a> (jazz, musique brésilienne, klezmer, ...). <br>
-							C'est sur scène et dans <a href="{{ path('collaborations') }}" class="text-link">ses différents projets</a> qu'il met à profit ses connaissances, et propose des arrangements modernes et originaux, provenant de nombreuses <strong>influences</strong>.
+							C'est sur scène et dans <a href="{{ path('collaborations') }}" class="text-link">ses différents projets</a> qu'il met à profit ses connaissances, et propose des arrangements modernes et originaux, provenant de nombreuses <strong>influences</strong> (dont des <a href="https://www.jeremy-dutheil.fr/blog/10-accordeonistes-francais-incontournables/">accordéonistes français incontournables</a>).
 						</p>
 					</div>
 				</div>
