--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/bio_pic.jpg" alt="" class="flash-item__background">
+			<img src="img/bio_pic.jpg" alt="Jérémy Dutheil - Accordéoniste à Paris" class="flash-item__background">
 		</div>
 	</section>
 
@@ -23,6 +23,8 @@
 
 			<div class="row">
 				<div class="col-sm-8">
+					<h2 class="section-title section-title--small">Parcours</h2>
+
 					<div>
 						<p>
 							Bercé par la musique, Jérémy prend ses premières leçons d'accordéon dès l'âge de 4 ans ; suivant une formation complète comprenant également du solfège, il apprend à déchiffrer les notes sur une partition avant de savoir lire et écrire. Suivant des cours réguliers avec plusieurs professeurs durant toute sa scolarité, Jérémy participe à plusieurs concours ACF (<em>Accordéon Club de France</em>) et à des stages au <a href="http://www.cnima.com" class="text-link">CNIMA</a> (<em>Centre National et International de Musique et d'Accordéon</em>), sous la direction de son célèbre directeur Jacques Mornet.<br>
@@ -39,7 +41,7 @@
 
 						<p>
 							Fort de ces nombreuses expériences, Jérémy possède une <strong>formation musicale complète</strong> (solfège, rythme, ...) mais aussi une capacité d'<strong>improvisation</strong> et une sensitibilité à de nombreux <a href="#" class="text-link">styles musicaux</a> (jazz, musique brésilienne, klezmer, ...). <br>
-							C'est sur scène et dans <a href="{{ path('collaborations') }}" class="text-link">ses différents projets</a> qu'il met à profit ses connaissances, et propose des arrangements modernes et originaux, provenant de nombreuses <strong>influences</strong> (dont des <a href="https://www.jeremy-dutheil.fr/blog/10-accordeonistes-francais-incontournables/">accordéonistes français incontournables</a>).
+							C'est sur scène et dans <a href="{{ path('collaborations') }}">ses différents projets</a> qu'il met à profit ses connaissances, et propose des arrangements modernes et originaux, provenant de nombreuses <strong>influences</strong> (dont des <a href="https://www.jeremy-dutheil.fr/blog/10-accordeonistes-francais-incontournables/">accordéonistes français incontournables</a>).
 						</p>
 					</div>
 				</div>
@@ -52,6 +54,135 @@
 				</div>
 			</div>
 			<!-- /.row -->
+
+			<div class="row" style="margin-top: 15px;">
+				<div class="col-sm-8">
+					<h2 class="section-title section-title--small">Projets et styles musicaux</h2>
+
+					<p>
+						Aujourd'hui, Jérémy Dutheil évolue essentiellement dans les univers <strong>jazz</strong> et <strong>chanson française</strong>. Il participe entre autres à un spectacle hommage à Edith Piaf, <i>Rue La Môme</i>, et accompagne une jeune chanteuse auteure-compositrice, <i>Marie Pétrolette</i>. <br>
+						Côté jazz, il est le leader d'un groupe de jazz manouche ; avec son comparse guitariste Solal Poux, ils se produisent essentiellement en duo mais sont parfois rejoints par d'autres instrumentistes (guitare rythmique, contrebasse). <br>
+						À la croisée des deux univers, on retrouve notamment le groupe MimE, une formation atypique (Guitare, Accordéon, Orgue Hammond, Batterie) qui propose une chanson à textes portée par des arrangements jazz.
+					</p>
+
+					<p>
+						Jérémy se produit en public dans toute la France avec ses différents projets, mais est également présent dans le secteur événementiel ; avec des formules en solo, duo et jusqu'au quartet, ils proposent <a href="{{ path('animations') }}">différentes prestations d'animation musicale</a> à destination des particuliers et professionnels.
+					</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="{{ asset('img/videos-pic.jpg') }}" alt="Jérémy DUTHEIL, accordéoniste, en concert" class="img-fluid page-section__img">
+				</div>
+			</div>
+			<!-- /.row -->
+
+			<div class="row" style="margin-top: 25px;">
+				<div class="col-sm-12">
+					<h2 class="section-title section-title--small">Discographie</h2>
+
+					<div class="row">
+						<div class="col-sm-4">
+							<img src="{{ asset('img/lesfilsdeflute-surnotrefil.jpg') }}" alt="Les Fils de Flûte - Sur notre fil" class="img-fluid">
+						</div>
+
+						<div class="col-sm-8">
+							<h3 class="section-title section-title--smaller">Les Fils de Flûte - Sur notre fil (2012)</h3>
+
+							<p>
+								Le premier album des Fils de Flûte, dont Jérémy est l'un des membres fondateurs, sort à l'été 2012. Les trois musiciens proposent un opus basé uniquement sur des compositions, qu'ils ont ensemble écrit et composé. <br>
+								Jérémy intervient donc ici au niveau des compositions et des arrangements, et au niveau de l'écriture sur quelques titres.
+							</p>
+						</div>
+					</div>
+
+					<div class="row" style="margin-top: 15px;">
+						<div class="col-sm-8">
+							<h3 class="section-title section-title--smaller">Zoulouzbek Band - Cousins, Cousines (2017)</h3>
+
+							<p>
+								Un album particulier que celui des Zoulouzbek Band, car ils réunissent ici un bon nombre d'amis musiciens croisés sur les routes pendant leurs années de tournée. Jérémy y participe avec MimE, qui signe une composition sur l'album : "Le bistrot des copains".
+							</p>
+						</div>
+
+						<div class="col-sm-4">
+							<img src="{{ asset('img/zoulouzbekband-cousinscousines.jpg') }}" alt="Zoulouzbek Band - Cousins, Cousines" class="img-fluid">
+						</div>
+					</div>
+
+					<div class="row" style="margin-top: 15px;">
+						<div class="col-sm-4">
+							<img src="{{ asset('img/l1consolable-laugmentation.jpg') }}" alt="L'1nconsolable - L'augmentation" class="img-fluid">
+						</div>
+
+						<div class="col-sm-8">
+							<h3 class="section-title section-title--smaller">L'1nconsolable - L'augmentation (2018)</h3>
+
+							<p>
+								L'augmentation, un album dont vous êtes le héros ! La marque de fabrique de l'1nconsolable, c'est de produire des albums originaux, avec des concepts très forts. Ici, le nombre de titres présents ne permet même pas la gravure sur CD et pour cause.. C'est en réalité un album interactif auquel vous avez droit, où une question est posée à la fin de chaque morceau. Suivant votre réponse, vous serez alors orienté vers l'une ou l'autre des autres chansons, créant votre propre parcours à chaque écoute... <br>
+								Jérémy a enregistré son accordéon sur plusieurs morceaux de l'album.
+							</p>
+						</div>
+					</div>
+
+					<div class="row" style="margin-top: 15px;">
+						<div class="col-sm-8">
+							<h3 class="section-title section-title--smaller">MimE - MimE à Deux (2018)</h3>
+
+							<p>
+								MimE, c'est un groupe qui joue en duo (accordéon / voix) et en quartet (rejoints par l'orgue Hammond et la batterie). Ici, il s'agissait de produire un premier EP à deux, pour donner l'idée. Juste 3 morceaux, en toute intimité, mais qui représentent bien l'univers de ce projet. <br>
+								Jérémy a participé aux arrangements, et à  l'enregistrement de l'accordéon sur ce disque.
+							</p>
+						</div>
+
+						<div class="col-sm-4">
+							<img src="{{ asset('img/mime-mime.jpg') }}" alt="MimE - MimE à deux" class="img-fluid">
+						</div>
+					</div>
+
+					<div class="row" style="margin-top: 15px;">
+						<div class="col-sm-4">
+							<img src="{{ asset('img/mariepetrolette-apois.jpg') }}" alt="Marie Pétrolette - À pois !" class="img-fluid">
+						</div>
+
+						<div class="col-sm-8">
+							<h3 class="section-title section-title--smaller">Marie Pétrolette - À pois (2018)</h3>
+
+							<p>
+								Encore une fois, la nécessité de sortir un EP pour donner l'idée, et figer une période sur le disque. Les textes de Marie Pétrolette nous parlent de la vie d'une jeune femme ordinaire dans le monde d'aujourd'hui. Tantôt coquins, tantôt cyniques, souvent avec humour... <br>
+								Jérémy réalise ici les arrangements, et l'enregistrement de l'accordéon.
+							</p>
+						</div>
+					</div>
+
+					<div class="row" style="margin-top: 15px;">
+						<div class="col-sm-8">
+							<h3 class="section-title section-title--smaller">Majid & Yano Tët - Est-ce ainsi que les hommes vivent (2018)</h3>
+
+							<p>
+								Un projet qui a beaucoup évolué au fil des années, et un album qui s'est construit sur assez longtemps également. Jérémy participe à l'enregistrement de certain titres, partageant l'accordéon sur l'album avec Maxime Vauthier (Tournée Générale).
+							</p>
+						</div>
+
+						<div class="col-sm-4">
+							<img src="{{ asset('img/yanotet-estceainsi.jpg') }}" alt="Madjid et Yano Tët - Est-ce ainsi que les hommes vivent" class="img-fluid">
+						</div>
+					</div>
+
+					<div class="row" style="margin-top: 15px;">
+						<div class="col-sm-4">
+							<img src="{{ asset('img/cidmarquis-jencreve.jpg') }}" alt="Cid Marquis - J'en crève" class="img-fluid">
+						</div>
+
+						<div class="col-sm-8">
+							<h3 class="section-title section-title--smaller">Cid Marquis - J'en crève (2019)</h3>
+
+							<p>
+								Un premier single pour une artiste qu'on voit plus souvent évoluer dans des projets "hommage" (Rue La Môme, Lizard Queen, ...). Jérémy signe ici les arrangements, et l'enregistrement de l'accordéon bien sûr !
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- /.container -->
 	</section>
