--- a/templates/pages/bio.html.twig
+++ b/templates/pages/bio.html.twig
@@ -23,7 +23,8 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
-			<h1 class="section-title">Accordéoniste professionnel, Paris</h1>
+			<h1 class="section-title section-title--centered">Accordéoniste professionnel, Paris</h1>
+			<div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
 
 			<div class="row">
 				<div class="col-sm-8">
